-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P2
-
Affects Version/s: 9, 10
-
Component/s: hotspot
-
b41
-
generic
-
Verified
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8195715 | 11 | Dean Long | P2 | Resolved | Fixed | b01 |
| JDK-8197758 | 10u-cpu | Dean Long | P2 | Resolved | Fixed | master |
| JDK-8200960 | 10.0.2 | Unassigned | P2 | Resolved | Fixed | b01 |
| JDK-8195954 | 10.0.1 | Dean Long | P2 | Resolved | Fixed | b01 |
2 Null pointer dereference defect groups in null:0
- backported by
-
JDK-8195715 2 Null pointer dereference defect groups related to ProjNode::is_uncommon_trap_if_pattern()
-
- Resolved
-
-
JDK-8195954 2 Null pointer dereference defect groups related to ProjNode::is_uncommon_trap_if_pattern()
-
- Resolved
-
-
JDK-8197758 2 Null pointer dereference defect groups related to ProjNode::is_uncommon_trap_if_pattern()
-
- Resolved
-
-
JDK-8200960 2 Null pointer dereference defect groups related to ProjNode::is_uncommon_trap_if_pattern()
-
- Resolved
-