8194982: 2 Null pointer dereference defect groups related to ProjNode::is_uncommon_trap_if_pattern()

Reviewed-by: kvn